--- a/settings.json
+++ b/settings.json
@@ -3,11 +3,11 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"NamaBot":"NanzBot", 
-"ownerNumber": "6285797957303@s.whatsapp.net",
-"NomorOwner":"6285797957303", 
-"NomorOwner2":"+62 857-9795-7303", 
-"NamaOwner":"Nanz Official", 
+"NamaBot": "Rohis",
+"ownerNumber": "6288212465570@s.whatsapp.net",
+"NomorOwner":"6288212465570", 
+"NomorOwner2":"+62 882-1246-5570", 
+"NamaOwner":"Yt : ROHIS GEMING", 
 "Dana":"081220670449", 
 "Pulsa":"081220670449", 
 "Gopay":"082298891772", 
